--- a/monitoringagent/pom.xml
+++ b/monitoringagent/pom.xml
@@ -5,16 +5,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>project</artifactId>
-    <groupId>io.github.cloudiator</groupId>
+    <artifactId>management</artifactId>
+    <groupId>io.github.cloudiator.monitoring</groupId>
     <version>0.3.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>io.github.cloudiator.monitoring</groupId>
-  <artifactId>monitoring</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
 
-  <name>monitoring</name>
+  <artifactId>monitoringagent</artifactId>
+  <version>0.3.0-SNAPSHOT</version>
   <url>https://github.com/cloudiator/monitoring/</url>
   <packaging>pom</packaging>
 
