--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   </parent>
 
   <groupId>io.github.cloudiator.monitoring</groupId>
-  <artifactId>project</artifactId>
+  <artifactId>management</artifactId>
   <packaging>pom</packaging>
   <version>0.3.0-SNAPSHOT</version>
 
