--- a/monitoringagent/pom.xml
+++ b/monitoringagent/pom.xml
@@ -97,6 +97,12 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.6</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cloudiator.visor.client</groupId>
+      <artifactId>java-rest</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
