--- a/monitoringagent/pom.xml
+++ b/monitoringagent/pom.xml
@@ -87,15 +87,17 @@
       <artifactId>config</artifactId>
       <version>1.3.1</version>
     </dependency>
+
     <dependency>
       <groupId>io.github.cloudiator.rest</groupId>
       <artifactId>model</artifactId>
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.6</version>
+      <groupId>io.github.cloudiator.iaas</groupId>
+      <artifactId>iaas-common</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.github.cloudiator.visor.client</groupId>
