--- a/monitoringagent/src/main/resources/application.conf
+++ b/monitoringagent/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+#kafka.bootstrapServers = "158.37.63.167:9092"
 kafka.bootstrapServers ="134.60.64.94:9092"
 kafka.groupId = monitoring
 kafka.responseTimeout = 50000
