--- a/monitoringagent/src/main/resources/reference.conf
+++ b/monitoringagent/src/main/resources/reference.conf
@@ -1,14 +1,18 @@
 jpa.dialect = org.hibernate.dialect.MySQL5Dialect
+jpa.dialect = ${?JPA_DIALECT}
 jpa.driver = org.mariadb.jdbc.Driver
-#jpa.url = "jdbc:mysql://localhost:3306/user"
-#jpa.user = "databaseUser"
-#jpa.password = "databasePassword"
+jpa.driver = ${?JPA_DRIVER}
+jpa.url = "jdbc:mysql://localhost:3306/monitoring"
+jpa.url = ${?JPA_URL}
+jpa.user = "databaseUser"
+jpa.user = ${?JPA_USER}
+jpa.password = "databasePassword"
+jpa.password = ${?JPA_PASSWORD}
 
-jpa.url = "jdbc:mysql://localhost:3306/myDatabase"
-jpa.user = "admin"
-jpa.password = "adminpw"
 
 kafka.bootstrapServers = "localhost:9092"
+kafka.bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 kafka.groupId = monitoring
+kafka.groupId = ${?KAFKA_GROUP_ID}
 kafka.responseTimeout = 50000
-
+kafka.responseTimeout = ${?KAFKA_RESPONSE_TIMEOUT}
