--- a/monitoringagent/pom.xml
+++ b/monitoringagent/pom.xml
@@ -23,19 +23,27 @@
     <docker.tag>manual</docker.tag>
   </properties>
 
-  <repositories>
-    <repository>
-      <id>ossrh</id>
-      <name>ossrh Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+  <profiles>
+    <profile>
+      <id>useSonatypeRepo</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <repositories>
+        <repository>
+          <id>ossrh</id>
+          <name>ossrh Snapshots</name>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+  </profiles>
 
   <dependencies>
     <dependency>
@@ -119,6 +127,9 @@
           <to>
             registry.hub.docker.com/cloudiator/monitoring-agent:${docker.tag}
           </to>
+          <container>
+            <useCurrentTimestamp>true</useCurrentTimestamp>
+          </container>
         </configuration>
       </plugin>
 
