--- a/pom.xml
+++ b/pom.xml
@@ -17,62 +17,69 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <modules>
-    <module>monitoringagent</module>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <modules>
+        <module>monitoringagent</module>
 
-  </modules>
+    </modules>
 
-  <parent>
-    <groupId>io.github.cloudiator</groupId>
-    <artifactId>project</artifactId>
+    <parent>
+        <groupId>io.github.cloudiator</groupId>
+        <artifactId>project</artifactId>
+        <version>0.3.0-SNAPSHOT</version>
+    </parent>
+
+    <groupId>io.github.cloudiator.monitoring</groupId>
+    <artifactId>monitoringmanagement</artifactId>
+    <packaging>pom</packaging>
     <version>0.3.0-SNAPSHOT</version>
-  </parent>
 
-  <groupId>io.github.cloudiator.monitoring</groupId>
-  <artifactId>monitoringmanagement</artifactId>
-  <packaging>pom</packaging>
-  <version>0.3.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <name>monitoringmanagement</name>
+    <description>Performs monitoring tasks within the cloudiator framework.</description>
+    <url>https://github.com/cloudiator</url>
 
-  <name>monitoringmanagement</name>
-  <description>Performs monitoring tasks within the cloudiator framework.</description>
-  <url>https://github.com/cloudiator</url>
+    <profiles>
+        <profile>
+            <id>useSonatypeRepo</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <!-- ....to here -->
+            <repositories>
+                <repository>
+                    <id>ossrh</id>
+                    <name>ossrh Snapshots</name>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <releases>
+                        <enabled>false</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 
-  <!-- ....to here -->
-  <repositories>
-    <repository>
-      <id>ossrh</id>
-      <name>ossrh Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+    <scm>
+        <connection>scm:git:https://github.com/cloudiator/monitoring.git</connection>
+        <developerConnection>scm:git:git@github.com:cloudiator/monitoring.git</developerConnection>
+        <url>https://github.com/cloudiator/monitoring/</url>
+        <tag>HEAD</tag>
+    </scm>
 
-  <scm>
-    <connection>scm:git:https://github.com/cloudiator/monitoring.git</connection>
-    <developerConnection>scm:git:git@github.com:cloudiator/monitoring.git</developerConnection>
-    <url>https://github.com/cloudiator/monitoring/</url>
-    <tag>HEAD</tag>
-  </scm>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-  </dependencies>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
