--- a/monitoringagent/pom.xml
+++ b/monitoringagent/pom.xml
@@ -108,11 +108,18 @@
       <artifactId>iaas-common</artifactId>
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>io.github.cloudiator.visor.client</groupId>
       <artifactId>java-rest</artifactId>
       <version>0.3.0-SNAPSHOT</version>
       <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-ehcache</artifactId>
+      <version>5.2.12.Final</version>
     </dependency>
 
   </dependencies>
