--- a/monitoringagent/src/main/resources/reference.conf
+++ b/monitoringagent/src/main/resources/reference.conf
@@ -16,3 +16,6 @@ kafka.groupId = monitoring
 kafka.groupId = ${?KAFKA_GROUP_ID}
 kafka.responseTimeout = 50000
 kafka.responseTimeout = ${?KAFKA_RESPONSE_TIMEOUT}
+
+monitoring.install.melodic.tools = false
+monitoring.install.melodic.tools = ${?MONITORING_INSTALL_MELODIC_TOOLS}
