--- a/monitoringagent/src/main/resources/reference.conf
+++ b/monitoringagent/src/main/resources/reference.conf
@@ -19,3 +19,9 @@ kafka.responseTimeout = ${?KAFKA_RESPONSE_TIMEOUT}
 
 monitoring.install.melodic.tools = false
 monitoring.install.melodic.tools = ${?DEPLOYMENT_INSTALL_MELODIC_TOOLS}
+monitoring.retry.attempts = 5
+monitoring.retry.attempts = ${?MONITORING_RETRY_ATTEMPTS}
+monitoring.retry.minwaitingtime = 300
+monitoring.retry.minwaitingtime = ${?MONITORING_RETRY_MINTIME}
+monitoring.retry.maxwaitingtime = 5000
+monitoring.retry.maxwaitingtime = ${?MONITORING_RETRY_MAXTIME}
