--- a/monitoringagent/src/main/resources/reference.conf
+++ b/monitoringagent/src/main/resources/reference.conf
@@ -17,7 +17,7 @@ kafka.groupId =${?KAFKA_GROUP_ID}
 kafka.responseTimeout = 50000
 kafka.responseTimeout =${?KAFKA_RESPONSE_TIMEOUT}
 
-monitoring.install.melodic.tools = false
+monitoring.install.melodic.tools = true
 monitoring.install.melodic.tools = ${?DEPLOYMENT_INSTALL_MELODIC_TOOLS}
 monitoring.retry.attempts = 5
 monitoring.retry.attempts = ${?MONITORING_RETRY_ATTEMPTS}
